
@startuml
package "com.directi.training.isp.exercise" {
    interface Door {
        +lock(): void
        +unlock(): void
        +open(): void
        +close(): void
        +timeOutCallback(): void
        +proximityCallback(): void
    }

    class SensingDoor implements Door {
        -_locked: boolean
        -_opened: boolean
        +SensingDoor(sensor: Sensor): void
        +lock(): void
        +unlock(): void
        +open(): void
        +close(): void
        +timeOutCallback(): void
        +proximityCallback(): void
    }

    class Sensor {
        +register(door: Door): void
        -isPersonClose(): boolean
    }

    class TimedDoor implements Door {
        -_locked: boolean
        -_opened: boolean
        +TimedDoor(timer: Timer): void
        +lock(): void
        +unlock(): void
        +open(): void
        +close(): void
        +timeOutCallback(): void
        +proximityCallback(): void
    }

    class Timer {
        +register(timeOut: long, door: Door): void
    }

    Sensor ..> "uses" Door 
    Timer ..> "uses" Door
}
@enduml
